src/components/MainContent.css
.gallery-card-parent-div {
  display: flex;
  justify-content: center;
}

div.gallery-card-img {
  max-width: 210px;
  aspect-ratio: 3/4;
  background: #2b2b2b;
  box-shadow: 5px 10px #171010;
  border-radius: 5px;
}

div.gallery-card-img img {
  height: 100%;
  width: 100%;
  object-fit: contain;
}

.book-details {
  color: #ffffff;
  background: #2b2b2b;
  text-align: justify;
}

.book-details-img img {
  width: 100%;
  object-fit: contain;
}

.book-details-body .btn {
  background: black;
  height: 44px;
  line-height: 30px;
  text-align: center;
}

.media-scroller {
  display: grid;
  gap: 1rem;
  grid-auto-flow: column;

  overflow-x: auto;
  overscroll-behavior-inline: contain;
}

.media-element {
  background: #2b2b2b;
  border-radius: 5px;
}

.media-element img {
  width: 100%;

  aspect-ratio: 2/3;

  object-fit: contain;
}

@media (width < 800px) {
  .media-scroller {
    grid-auto-columns: 28%;
  }

  .book-details .button-container {
    width: 100%;
    display: flex;
    justify-content: center;
  }
}

@media (800px <= width < 1400px) {
  .media-scroller {
    grid-auto-columns: 18%;
  }
}

@media (width >= 1400px) {
  .media-scroller {
    grid-auto-columns: 11%;
  }
}

